--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <title>this is home page of zhang-yong-qiao    </title>
     </head>
     <body>
-        hello
+        <h1>hello</h1>
     </body>
 </html>
