--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
+    <head>
     <title>this is home page of zhang-yong-qiao    </title>
     </head>
+    
     <body>
-        <h1>hello</h1>
+    hello I am 5cchild .
+    <h1>Welcome to my first homepage! </h1>
     </body>
 </html>
