--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     
     <body>
-    hello I am 5cchild .
+    hello I am 5cchild 
     <h1>Welcome to my first homepage! </h1>
     </body>
 </html>
